--- a/klinta project regular/index.html
+++ b/klinta project regular/index.html
@@ -146,7 +146,7 @@
             </div>
         </div>
     </section>
-    <div id="point2">
+    <!-- <div id="point2">
         <section class="section03">0303030000
             <div class="wrap">
                 <div class="mg1 mv01"><img
@@ -161,7 +161,7 @@
                         class="flavor" alt=""></div>
             </div>
         </section>
-    </div>
+    </div> -->
 
 
 
