--- a/aboutus.html
+++ b/aboutus.html
@@ -102,7 +102,7 @@
                             François Demachy，持續擁抱創始以來的高貴與創新精神。迪奧先生：「我之所以想成為調香師，就是想讓每位女性在穿上我設計的服裝後，能留下一縷迷人芬芳。」</p>
                     </article>
                 </div>
-                <div class="story2">
+                <!-- <div class="story2">
                     <article class="story2">
                         普羅旺斯以及格拉斯地區與迪奧的歷史息息相關。愛好花朵的迪奧先生正是在此地置產，在 Château de la Colle Noire
                         城堡度假。今日，迪奧選擇在擁有絕佳氣候與風土地理條件的格拉斯，栽植五月玫瑰以及茉莉花。
@@ -137,7 +137,7 @@
                         將與您分享並揭開迪奧香氛與眾不同之奧祕。每一支影片，穿插著調香傳統與花植專業的交流對談，都代表著一段探索珍稀原料、探究美好風土的旅程。這些細緻而充滿人情韻味的畫面，來自於全世界各地無與倫比的香氛原料。「調香實驗室，就像是來自這些旅程的明信片。」
                         迪奧首席調香師 François Demachy
                     </article>
-                </div>
+                </div> -->
             </section>
             <section class="research" id="research">
                 <h3 class="centerh3">7大法蘭花園，從原材料悉心研發</h3>
