--- a/aboutus.html
+++ b/aboutus.html
@@ -107,7 +107,7 @@
                         普羅旺斯以及格拉斯地區與迪奧的歷史息息相關。愛好花朵的迪奧先生正是在此地置產，在 Château de la Colle Noire
                         城堡度假。今日，迪奧選擇在擁有絕佳氣候與風土地理條件的格拉斯，栽植五月玫瑰以及茉莉花。
                     </article>
-                    <div class="story_pic2"><img src="./website_pic/candle/pageone/_1440_1200 (1).webp"
+                    <div class="story_pic2"><img src="./website_pic/flowers/1b5f4e225c707214082f1a0897165830.jpg"
                             class="story_pic2">
                     </div>
                 </div>
