1221關於我們圖片改掉

--- a/aboutus.html
+++ b/aboutus.html
@@ -107,13 +107,11 @@
                         普羅旺斯以及格拉斯地區與迪奧的歷史息息相關。愛好花朵的迪奧先生正是在此地置產，在 Château de la Colle Noire
                         城堡度假。今日，迪奧選擇在擁有絕佳氣候與風土地理條件的格拉斯，栽植五月玫瑰以及茉莉花。
                     </article>
-                    <div class="story_pic2"><img src="./website_pic/flowers/1b5f4e225c707214082f1a0897165830.jpg"
-                            class="story_pic2">
+                    <div class="story_pic2"><img src="./website_pic/flowers/2-image_1440_1200.jpg" class="story_pic2">
                     </div>
                 </div>
-                <!-- <div class="story3">
-                    <div class="story_pic3"><img src="./website_pic/candle/pageone/_1440_1200 (2).webp"
-                            class="story_pic3">
+                <div class="story3">
+                    <div class="story_pic3"><img src="./website_pic/flowers/9-science_1440_1200.jpg" class="story_pic3">
                     </div>
                     <article class="story3">
                         1951年，熱愛花朵的迪奧先生在法國南部購置了柯勒諾瓦莊園。它位於蒙托雷，毗鄰格拉斯，矗立於幽靜青翠的丘陵之上，俯視著格拉斯的豐饒熱土。
@@ -124,12 +122,11 @@
                     <article class="story4">
                         自1947 年 Miss Dior 誕生以來，迪奧與許多知名的調香師合作過。今日迪奧有專屬調香師，François Demachy。迪奧香氛的特色：最高品質、獨一無二、經典永恆。
                     </article>
-                    <div class="story_pic4"><img src="./website_pic/candle/pageone/_1440_1200 (3).webp"
-                            class="story_pic4">
+                    <div class="story_pic4"><img src="./website_pic/candle/pageone/_1440_1200.jpg" class="story_pic4">
                     </div>
                 </div>
                 <div class="story5">
-                    <div class="story_pic5"><img src="./website_pic/candle/pageone/_1440_1200 (4).webp"
+                    <div class="story_pic5"><img src="./website_pic/candle/pageone/demi-mesure_1440_1200.jpg"
                             class="story_pic5">
                     </div>
                     <article class="story5">
@@ -137,7 +134,7 @@
                         將與您分享並揭開迪奧香氛與眾不同之奧祕。每一支影片，穿插著調香傳統與花植專業的交流對談，都代表著一段探索珍稀原料、探究美好風土的旅程。這些細緻而充滿人情韻味的畫面，來自於全世界各地無與倫比的香氛原料。「調香實驗室，就像是來自這些旅程的明信片。」
                         迪奧首席調香師 François Demachy
                     </article>
-                </div> -->
+                </div>
             </section>
             <section class="research" id="research">
                 <h3 class="centerh3">7大法蘭花園，從原材料悉心研發</h3>
