--- a/aboutus.html
+++ b/aboutus.html
@@ -122,7 +122,8 @@
                     <article class="story4">
                         自1947 年 Miss Dior 誕生以來，迪奧與許多知名的調香師合作過。今日迪奧有專屬調香師，François Demachy。迪奧香氛的特色：最高品質、獨一無二、經典永恆。
                     </article>
-                    <div class="story_pic4"><img src="./website_pic/candle/pageone/_1440_1200.jpg" class="story_pic4">
+                    <div class="story_pic4"><img src="./website_pic/candle/ig/pexels-photo-3654620.jpeg"
+                            class="story_pic4">
                     </div>
                 </div>
                 <div class="story5">
